[package]
name = "wificar-on-a-budget"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
rppal = "0.13.1"
