[package]
name = "wificar-on-a-budget"
version = "0.0.1"
edition = "2021"
authors = ['makerio']
readme = 'README.md'
repository = 'https://www.github.com/makerio90/wificar'
keywords = ['wifi', 'car', 'wireless', 'remote-controlled', 'raspbarry pi']
licence = 'gpl 3.0'
discription = """
interface for controlling a car/rover over wifi
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
rppal = { git='https://github.com/makerio90/rppal/', branch='patch-1'}
