[package]
name = "drivers"
version = "1.0.0"
edition = "2021"
authors = ['makerio']
readme = 'README.md'
repository = 'https://www.github.com/makerio90/wificar'
keywords = ['motor driver', 'raspbarry pi', 'gpio', 'car', 'rc']
license = 'gpl 3.0'
description = """
interface for controlling a car/rover over wifi
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rppal = { git='https://github.com/makerio90/rppal/', branch='patch-1'}
serde = { version = "1.0.144", features = ["derive"] }
