[package]
name = "drivers"
version = "1.0.0"
edition = "2021"
authors = ['makerio']
readme = 'README.md'
repository = 'https://www.github.com/makerio90/wificar'
keywords = ['motor driver', 'raspbarry pi', 'gpio', 'car', 'rc']
license = 'gpl 3.0'
description = """
interface for controlling a car/rover over wifi
"""

[dependencies]
colored = "2.0.0"
log = "0.4.17"
rppal = "0.14.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.145"
