[package]
name = "frontend"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>", "makerio"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
wasm-bindgen-futures = "0.4.33"
sha2 = "0.10.6"
egui-notify = "0.4.4"
reqwest = { version = "0.11.12", features = ["stream"] }
web-sys = { version="0.3.60" , features = ["Location", "Document", "Navigator", "Gamepad", "GamepadButton", "WebSocket"]}
futures-util = "0.3.25"
tracing = "0.1.37"
js-sys = "0.3.60"
gloo-net = "0.2.4"
serde_json = "1.0.87"
futures = "0.3.25"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

