[package]
name = "shell"
version = "1.0.0"
edition = "2021"
authors = ['makerio']
readme = 'README.md'
repository = 'https://www.github.com/makerio90/wificar'
keywords = ['interactave shell', 'motor drivers', 'car', 'wifi', 'ssh']
license = 'gpl 3.0'
description = """
program for testing drivers
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
drivers = {path = '../drivers/'}
shrust = "0.0.7"
