[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
config = "0.13.2"
drivers = {path = '../drivers/'}
env_logger = "0.9.1"
log = "0.4.17"
serde = "1.0.145"
serde_derive = "1.0.145"
